# Project_3

./: Barbarian.cpp  Barbarian.hpp  BlueMen.cpp  BlueMen.hpp  CMakeLists.txt  Creature.cpp  Creature.hpp  Dice.cpp  Dice.hpp  Game.cpp  Game.hpp  HarryPotter.cpp  HarryPotter.hpp  Medusa.cpp  Medusa.hpp  Vampire.cpp  Vampire.hpp  main.cpp
